2004-04-05  Bastien Nocera  <hadess@hadess.net>

	* README: remove TODO item
	* src/totem.c: (totem_is_media): make "totem cd:" on the command-line
	work again (Closes: #138791)

2004-04-05  Bastien Nocera  <hadess@hadess.net>

	* NEWS: updated
	* README: removed TODO item
	* src/bacon-video-widget-xine.c: (xine_event_message),
	(bacon_video_widget_unrealize),
	(bacon_video_widget_can_get_frames): handle events from xine-lib
	even if the explanation field is empty (Closes: #130774)
	Handle the XINE_MSG_AUDIO_OUT_UNAVAILABLE event (Closes: #111602)
	Destroy event queues in the right order, make it possible to take
	a screenshot of the logo
	* src/dvd_plus_rw_utils.cpp: valgrind fixes from libbacon
	* src/vanity.c: (vanity_callback_connect), (video_widget_create):
	make the --debug mode work again

2004-04-05  Julien MOUTTE <julien@moutte.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_set_logo):
	gdk_pixbuf_new_from_file does not accept NULL GError it seems. That
	was working before though. Thanks to aldug for helping on that one.

2004-04-02  Andras Timar  <timar@gnome.hu>

	* configure.in: Added 'hu' to ALL_LINGUAS.

2004-04-01  Johan Dahlin  <johan@gnome.org>

	* src/bacon-video-widget-gst.c (bacon_video_widget_class_init):
	Tick, add BOOLEAN to end of argument list
	(got_time_tick): Send seekable argument.

2004-03-31  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am:
	* src/bacon-video-widget-xine.c: (bacon_video_widget_class_init),
	(generate_mouse_event), (bacon_video_widget_realize),
	(bacon_video_widget_tick_send), (bacon_video_widget_open),
	(bacon_video_widget_is_seekable):
	* src/bacon-video-widget.h:
	* src/baconvideowidget-marshal.list:
	* src/bvw-test.c: (main):
	* src/cd-drive.c: (get_cd_scsi_id), (get_scsi_cd_name),
	(linux_scan):
	* src/dvd_plus_rw_utils.cpp:
	* src/totem.c: (totem_action_set_mrl), (on_got_metadata_event),
	(update_seekable), (update_current_time), (gui_update_cb),