@@ -87,7 +87,6 @@ statusbar is wrong after having ejected an audio CD that was playing
 
 - support gxine, freevo, ypl playlist formats
 - use xpath where possible in playlist parsing
-- fix command-line parsing
 - write a widget more suitable for seeking in place of the current slider
 
 - Maybe move it into monkeymedia? The only real gnome deps
